applications/backbone/gateway/envoy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-proxy
  annotations:
    external-dns.alpha.kubernetes.io/target: gw.jynolen.fr
    cert-manager.io/cluster-issuer: acme-issuer
spec:
  gatewayClassName: envoy-gateway
  allowedListeners:
    namespaces:
      from: All
  listeners:
  - name: http
    protocol: HTTP
    hostname: '*.jynolen.fr'
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-proxy-open
  annotations:
    external-dns.alpha.kubernetes.io/target: gw.jynolen.fr
    cert-manager.io/cluster-issuer: acme-issuer
spec:
  gatewayClassName: envoy-gateway
  allowedListeners:
    namespaces:
      from: All
  listeners:
  - name: open-http
    protocol: HTTP
    hostname: '*.open.jynolen.fr'
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
spec:
  parentRefs:
  - name: envoy-proxy
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
